--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE HTML>
 
 <body>
+    <link href='https://fonts.googleapis.com/css?family=Aleo' rel='stylesheet'>
     <title>Ayden's Site</title>
     <header>
         <p>Ayden's Site</p>
     </header>
     <style>
         .dropbtn {
-          background-color: #09b475;
-          color: white;
+          background-color: #14f7ff;
+          color: rgb(255, 255, 255);
           padding: 16px;
           font-size: 16px;
           border: none;
@@ -33,7 +34,7 @@
         }
         .dropdown-content a:hover {background-color: #ddd;}
         .dropdown:hover .dropdown-content {display: block;}
-        .dropdown:hover .dropbtn {background-color: #3e8e41;}
+        .dropdown:hover .dropbtn {background-color: #11bcc2;}
         </style>
         <div class="dropdown">
             <button class="dropbtn">Dropdown</button>
