--- a/index.html
+++ b/index.html
@@ -3,12 +3,9 @@
 <body>
     <link href='https://fonts.googleapis.com/css?family=Aleo' rel='stylesheet'>
     <title>Ayden's Site</title>
-    <header>
-        <p>Ayden's Site</p>
-    </header>
     <style>
         .dropbtn {
-          background-color: #14f7ff;
+          background-color: #10a5aa;
           color: rgb(255, 255, 255);
           padding: 16px;
           font-size: 16px;
@@ -34,14 +31,16 @@
         }
         .dropdown-content a:hover {background-color: #ddd;}
         .dropdown:hover .dropdown-content {display: block;}
-        .dropdown:hover .dropbtn {background-color: #11bcc2;}
+        .dropdown:hover .dropbtn {background-color: #0b7074;}
         </style>
-        <div class="dropdown">
-            <button class="dropbtn">Dropdown</button>
-            <div class="dropdown-content">
-              <a href="#">Link 1</a>
-              <a href="#">Link 2</a>
-              <a href="#">Link 3</a>
+        <header style="color:Tomato;">
+            <div class="dropdown">
+                <button class="dropbtn">View</button>
+                <div class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+                </div>
             </div>
-          </div>
+        </header>
 </body>
