--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         .dropdown:hover .dropdown-content {display: block;}
         .dropdown:hover .dropbtn {background-color: #0b7074;}
         </style>
-        <header style="color:Tomato;">
+        <header>
             <div class="dropdown">
-                <button class="dropbtn">View</button>
+                <button class="dropbtn" style="color:Tomato;">View</button>
                 <div class="dropdown-content">
                 <a href="#">Link 1</a>
                 <a href="#">Link 2</a>
