--- a/index.html
+++ b/index.html
@@ -35,7 +35,23 @@
         </style>
         <header>
             <div class="dropdown">
-                <button class="dropbtn" style="color:Tomato;">View</button>
+                <button class="dropbtn">View</button>
+                <div class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn">View</button>
+                <div class="dropdown-content">
+                <a href="#">Link 1</a>
+                <a href="#">Link 2</a>
+                <a href="#">Link 3</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <button class="dropbtn">View</button>
                 <div class="dropdown-content">
                 <a href="#">Link 1</a>
                 <a href="#">Link 2</a>
