--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
         .dropdown-content a:hover {background-color: #ddd;}
         .dropdown:hover .dropdown-content {display: block;}
         .dropdown:hover .dropbtn {background-color: #0b7074;}
+        .right {
+            right: 0px;
+        }
         </style>
-        <header>
+        <header class="right">
             <div class="dropdown">
                 <button class="dropbtn">View</button>
                 <div class="dropdown-content">
