--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         .dropdown {
           position: relative;
           display: inline-block;
+          right: 0px;
         }
         .dropdown-content {
           display: none;
@@ -32,11 +33,8 @@
         .dropdown-content a:hover {background-color: #ddd;}
         .dropdown:hover .dropdown-content {display: block;}
         .dropdown:hover .dropbtn {background-color: #0b7074;}
-        .right {
-            right: 0px;
-        }
         </style>
-        <header class="right">
+        <header>
             <div class="dropdown">
                 <button class="dropbtn">View</button>
                 <div class="dropdown-content">
